--- a/src/source/views/performance.html
+++ b/src/source/views/performance.html
@@ -57,20 +57,362 @@
           </li>
         </ul>
     </nav>
+
+    <div class="wrapper">
+  
+        <div class="top_navbar">
+          <div class="hamburger">
+             <div class="one"></div>
+             <div class="two"></div>
+             <div class="three"></div>
+             <div class="four"></div>
+          </div>
+          <div class="top_menu">
+            <div class="logo"></div>
+            <ul>
+            <li><a href="#" id = "setting">
+                    <i class="material-icons"></i>
+                    <svg class="svg-icon" style="width: 1em; height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M511.9935 699.733c-102.4 0-187.733-85.333-187.733-187.733s85.333-187.733 187.733-187.733S699.7265 409.6 699.7265 512s-85.333 187.733-187.733 187.733z m472.177-250.311c-5.689-22.756-22.756-39.822-45.511-45.511l-11.378-5.689c-34.133-11.378-68.267-34.133-91.022-68.267s-22.756-73.956-17.067-113.778l5.689-11.378c5.689-17.067 0-45.511-17.067-62.578 0 0-17.067-11.378-56.889-34.133s-56.889-28.444-56.889-28.444c-22.756-5.689-45.511 0-62.578 17.067l-11.378 11.378c-28.444 22.756-68.267 39.822-108.089 39.822s-79.644-17.067-108.089-39.822l-5.689-17.067c-17.067-11.378-45.511-22.756-62.578-11.378 0 0-17.067 5.689-56.889 28.444s-56.889 34.133-56.889 34.133c-17.067 17.067-28.444 39.822-22.756 62.578l5.689 17.067c11.378 34.133 5.689 73.956-17.067 113.778-22.756 28.444-51.2 51.2-91.022 62.578l-11.378 5.689c-22.756 0-39.822 22.756-45.511 45.511 0 0-5.689 17.067-5.689 62.578s5.689 62.578 5.689 62.578c5.689 22.756 22.756 39.822 45.511 45.511l11.378 5.689c34.133 11.378 68.267 34.133 91.022 68.267s22.756 73.956 17.067 113.778l-5.689 11.378c-5.689 17.067 0 45.511 17.067 62.578 0 0 17.067 11.378 56.889 34.133s56.889 28.444 56.889 28.444c22.756 5.689 45.511 0 62.578-17.067l11.378-11.378c28.444-28.444 62.578-39.822 108.089-39.822 39.822 0 79.644 17.067 108.089 39.822l11.378 11.378c17.067 17.067 39.822 22.756 62.578 17.067 0 0 17.067-5.689 56.889-28.444s56.889-34.133 56.889-34.133 22.756-39.822 17.067-62.578l-5.689-17.067c-11.378-34.133-5.689-73.956 17.067-108.089s51.2-56.889 91.022-68.267l17.067-5.689c22.756-5.689 39.822-22.756 45.511-45.511 0 0 5.689-17.067 5.689-62.578-5.689-45.511-11.378-62.578-11.378-62.578z"  />
+                    </svg>
+                </a></li>
+
+            <li><a href="#" id = "download">
+                <i class="btn-circle-download">
+                    <svg id="arrow" width="14px" height="20px" viewBox="17 14 14 20">
+                    <path d="M24,15 L24,32"></path>
+                    <polyline points="30 27 24 33 18 27"></polyline>
+                    </svg>
+                    <svg id="check" width="21px" height="15px" viewBox="13 17 21 15">
+                    <polyline points="32.5 18.5 20 31 14.5 25.5"></polyline>
+                    </svg>
+                    <svg  id="border" width="48px" height="48px" viewBox="0 0 48 48">
+                    <path d="M24,1 L24,1 L24,1 C36.7025492,1 47,11.2974508 47,24 L47,24 L47,24 C47,36.7025492 36.7025492,47 24,47 L24,47 L24,47 C11.2974508,47 1,36.7025492 1,24 L1,24 L1,24 C1,11.2974508 11.2974508,1 24,1 L24,1 Z"></path>
+                    </svg>
+                </i>
+                </a></li>
+
+            <li><a href="#" id = "profile">
+                <i class="material-icons"></i>
+                <svg class="svg-icon" style="width: 1em; height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M853.333333 938.666667H170.666667v-85.333334a213.333333 213.333333 0 0 1 213.333333-213.333333h256a213.333333 213.333333 0 0 1 213.333333 213.333333v85.333334z m-341.333333-384a256 256 0 1 1 0-512 256 256 0 0 1 0 512z"  />
+                </svg>
+                </a></li>
+
+            <li><a href="#" id = "notification">
+                <i class="notification-box">
+                    <span class="notification-count">1</span>
+                    <div class="notification-bell">
+                        <span class="bell-top"></span>
+                        <span class="bell-middle"></span>
+                        <span class="bell-bottom"></span>
+                        <span class="bell-rad"></span>
+                    </div>
+                </i>
+                </a></li>
+            </ul>
+          </div>
+        </div>
+        
+        
+        <div class="main_container"></div>
+    </div>
+
     <div class = "table4">
         <h2><small>Performance Report</small><br><small> FY 2024, Q1</small></h2>
-        
-        <div class ="frame">
-            <div class="button-container">
-            <span class="button-text">Generate Report</span>
-            <a href="#" class="btn" id = "addbutton" >+</a>
-            </div>
+    </div>
+
+    <div class ="frame4">
+        <div class="button-container">
+        <span class="button-text">Generate Report</span>
+        <a href="#" class="btn" id = "addbutton" >+</a>
         </div>
     </div>
+
+    <div class="container">
+        <div class="profileContent" id="profilePopup">
+        <span class="arrow"></span>
+        <img src="../public/images/mini.png" alt="cookies-img" />
+        <p><strong>Electrix <br>Company</strong><br><small>- managed by -</small><br> Alfredo Linguini<br><small>lepasta@elecrix.co</small></p> 
+        <button class="accept">Log out</button>
+        </div>
+    </div>  
+    
+    <div class="container">
+      <div class="container notifications-container shadow" id = "notiPopup">
+          <div class = "realheader">
+          <div class="row header">
+          <div class="col-7">
+              <p class="title">
+              Notifications
+              <span class="unread-notifications-number">2</span>
+              </p>
+          </div>
+          </div>
+          </div>
+    
+    
+          <div class="row notifications">
+          <div class="col-12">
+    
+              <div class="row single-notification-box unread">
+              <div class="col-11 notification-text">
+                  <p>
+                  <a href="#" class="link name">FRG-123-LG-2</a>
+                  <span class="description">needed reorder</span>
+                  <a class="link" href="order.html">Go to Orders Page!</a>
+                  <span class="unread-symbol">•</span>
+                  </p>
+                  <p class="time">1m ago</p>
+              </div>
+              </div>
+    
+              <div class="row single-notification-box unread">
+              <div class="col-11 notification-text">
+                  <p>
+                  <a href="#" class="link name">NDS-424-DS-1</a>
+                  <span class="description">needed reorder</span>
+                  <a class="link group" href="order.html">Go to Orders Page!</a>
+                  <span class="unread-symbol">•</span>
+                  </p>
+                  <p class="time">1 day ago</p>
+              </div>
+              </div>
+    
+              <div class="row single-notification-box read">
+              <div class="col-11 notification-text">
+                  <p>
+                  <a href="#" class="link name">Rizky Hasanuda</a>
+                  <span class="description">sent you a private message</span>
+                  <span class="unread-symbol">•</span>
+                  </p>
+                  <p class="time">5 days ago</p>
+                  <div class="private-message">
+                  Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and 
+                  I'm already having lots of fun and improving my game.
+                  </div> 
+              </div>
+              </div>
+    
+              <div class="row single-notification-box read">
+              <div class="col-10 notification-text comment">
+                  <p>
+                  <a href="#" class="link name">Kimberly Smita</a>
+                  <span class="description">commented on your picture</span>
+                  <span class="unread-symbol">•</span>
+                  </p>
+                  <p class="time">1 week ago</p>
+              </div>
+              </div>
+    
+              <div class="row single-notification-box read">
+              <div class="col-11 notification-text">
+                  <p>
+                  <a href="#" class="link name">Nathan Petersa</a>
+                  <span class="description">reacted to your recent post</span>
+                  <a class="link" href="http://">5 end-game strategies to increase your win rate</a>
+                  <span class="unread-symbol">•</span>
+                  </p>
+                  <p class="time">2 weeks ago</p>
+              </div>
+              </div>
+    
+              <div class="row single-notification-box read">
+              <div class="col-11 notification-text">
+                  <p>
+                  <a href="#" class="link name">Anna Kim</a>
+                  <span class="description">left the group</span>
+                  <a class="link" href="http://">Chess Club</a>
+                  <span class="unread-symbol">•</span>
+                  </p>
+                  <p class="time">2 weeks ago</p>
+              </div>
+              </div>
+              
+          </div>
+          <div class="col-5 mark-as-read text-end">
+              <a href="#" id="markAllAsRead" class="mark-as-read-button align-middle">Mark all as read</a>
+          </div> 
+      </div>
+    </div>
+    
+    
+    <div class="container">
+      <div class="right-container" id = "modal">
+          <span class="arrow"></span>
+          <header>
+              <h1>Product Details</h1>
+              <div class="set">
+                  <div class="SKU">
+                      <label id="SKU">SKU</label>
+                      <input id="SKU" type="text" placeholder="SKU">
+                  </div>
+              </div>
+              <div class="set">
+                  <div class="Name">
+                      <label id="Name">Name</label>
+                      <input id="Name" type="text" placeholder="Name">
+                  </div>
+              </div>
+              <div class="set">
+                  <div class="Amount">
+                      <label id="Amount">Amount</label>
+                      <input id="Amount" type="text" placeholder="Amount">
+                  </div>
+              </div>
+              
+          </header>
+          <footer>
+              <div class="set">
+                  <button id="back">Back</button>
+                  <button id="next">Confirm</button>
+              </div>
+          </footer>
+      </div>
+    </div> 
+    
 
     
 
 </body>
+
+<script>
+    const downloadButton = document.querySelector('.btn-circle-download');
+    downloadButton.addEventListener('click', function() {
+    this.classList.add('load');
+    setTimeout(() => {
+        this.classList.add('done');
+    }, 1000);
+
+    setTimeout(() => {
+        this.classList.remove('load', 'done');
+    }, 5000);
+});
+
+</script>
+
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const profileButton = document.querySelector("#profile");
+        const profilePopup = document.getElementById("profilePopup");
+        const logOutButton = document.querySelector(".profileContent .accept");
+    
+        profileButton.addEventListener("click", function(event) {
+            profilePopup.style.display = "flex"; 
+        });
+    
+        document.addEventListener("click", function(event) {
+            const clickInsideProfileButton = profileButton.contains(event.target);
+            const clickInsideProfilePopup = profilePopup.contains(event.target);
+
+            if (!clickInsideProfileButton && !clickInsideProfilePopup) {
+                profilePopup.style.display = "none"; 
+            }
+        });
+
+        logOutButton.addEventListener("click", function(event) {
+            redirectToLogin();
+        });
+
+        function redirectToLogin() {
+            window.location.href = "login.html";
+        }
+    });
+</script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const notiButton = document.querySelector("#notification");
+        const notiPopup = document.getElementById("notiPopup");
+    
+        notiButton.addEventListener("click", function(event) {
+            notiPopup.style.display = "flex"; 
+        });
+    
+        document.addEventListener("click", function(event) {
+            const clickInsideNotiButton = notiButton.contains(event.target);
+            const clickInsideNotiPopup = notiPopup.contains(event.target);
+
+            if (!clickInsideNotiButton && !clickInsideNotiPopup) {
+                notiPopup.style.display = "none"; 
+            }
+        });
+
+    });
+
+</script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const addProduct = document.getElementById("addbutton");
+        const modal = document.getElementById("modal");
+        const closeButton = document.querySelector(".right-container footer #back");
+    
+        addProduct.addEventListener("click", function(event) {
+            event.preventDefault();
+            modal.style.display = "grid"; 
+        });
+    
+        closeButton.addEventListener("click", function() {
+            modal.style.display = "none"; 
+        });
+
+    });
+
+</script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const profileButton = document.querySelector("#profile");
+        const profilePopup = document.getElementById("profilePopup");
+        const logOutButton = document.querySelector(".profileContent .accept");
+    
+        profileButton.addEventListener("click", function(event) {
+            profilePopup.style.display = "flex"; 
+        });
+    
+        document.addEventListener("click", function(event) {
+            const clickInsideProfileButton = profileButton.contains(event.target);
+            const clickInsideProfilePopup = profilePopup.contains(event.target);
+
+            if (!clickInsideProfileButton && !clickInsideProfilePopup) {
+                profilePopup.style.display = "none"; 
+            }
+        });
+
+        logOutButton.addEventListener("click", function(event) {
+            redirectToLogin();
+        });
+
+        function redirectToLogin() {
+            window.location.href = "login.html";
+        }
+    });
+</script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const notiButton = document.querySelector("#notification");
+        const notiPopup = document.getElementById("notiPopup");
+    
+        notiButton.addEventListener("click", function(event) {
+            notiPopup.style.display = "flex"; 
+        });
+    
+        document.addEventListener("click", function(event) {
+            const clickInsideNotiButton = notiButton.contains(event.target);
+            const clickInsideNotiPopup = notiPopup.contains(event.target);
+
+            if (!clickInsideNotiButton && !clickInsideNotiPopup) {
+                notiPopup.style.display = "none"; 
+            }
+        });
+
+    });
+
+</script>
+
 
 <script>
   document.getElementById("LogoMenu").addEventListener("click", function() {
@@ -175,5 +517,9 @@
       remote.app.emit('performance-page');
   });
 </script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+<script src = "../public/functions.js"></script>
 
 </html>
