--- a/src/source/views/register.html
+++ b/src/source/views/register.html
@@ -17,13 +17,16 @@
                 <br> <br>
                 <input type="text" id ="status" placeholder="status" required>
                 <br> <br>
-                <button type="submit">Register</button>
+		<button type="submit">Register</button>
+		<button type="button" id="goToLogin">Login</button>
             </form>
             <div class="message" id="message_register"></div>
         </main>
     </div>
     
     <script src="../public/functions.js"></script>
+
+
 
 
 </body>
