--- a/src/source/views/dashboard.html
+++ b/src/source/views/dashboard.html
@@ -118,14 +118,6 @@
       <div class="main_container"></div>
   </div>
 
-  <div class="container">
-    <div class="profileContent" id="profilePopup">
-    <span class="arrow"></span>
-    <img src="../public/images/mini.png" alt="cookies-img" />
-    <p><strong>Electrix <br>Company</strong><br><small>- managed by -</small><br> Alfredo Linguini<br><small>lepasta@elecrix.co</small></p> 
-    <button class="accept">Log out</button>
-    </div>
-</div>  
 
 <div class="container">
   <div class="container notifications-container shadow" id = "notiPopup">
@@ -260,7 +252,78 @@
   </div>
 </div> 
 
-    
+
+<div class="center">
+  <div class="left">
+    <div class="logo">
+      <svg viewBox="0 0 200 400" width="100" height="100">
+        <path d=" M 174.627 77.683 C 173.776 78.815 142.411 133.739 129.968 166.414 C 129.34 168.064 128.78 169.45 128.204 171.119 C 127.727 172.503 127.488 173.714 126.933 175.086 C 126.212 176.871 126.006 177.829 125.667 179.358 C 125.301 181.008 124.477 184.693 124.121 187.63 C 123.856 189.808 123.741 191.662 123.663 193.853 C 123.462 199.472 123.876 204.233 124.636 209.8 C 127.42 230.202 135.691 246.266 147.665 262.895 C 148.73 264.375 149.618 265.639 150.777 267.047 C 152.739 269.432 154.445 271.444 156.857 273.381 C 159.729 275.688 162.496 277.205 165.903 278.596 C 168.996 279.859 171.753 280.586 175.056 281.078 C 178.597 281.605 181.659 281.725 185.216 281.306 C 188.955 280.865 192.024 279.892 195.522 278.517 C 197.728 277.65 199.557 276.802 201.61 275.62 C 204.662 273.863 225.417 262.219 236.258 252.224 C 239.451 249.28 244.212 243.928 244.962 243.452 C 245.712 242.977 264.83 213.834 259.473 198.687 Q 256.513 190.317 211.583 109.026 Q 196.037 82.262 193.522 78.637 C 191.452 75.653 188.937 70.289 183.683 70.278 C 178.429 70.267 175.231 76.89 175.106 76.877 M 236.638 249.594" fill-rule="evenodd" fill="rgb(219,223,255)"></path>
+        <linearGradient id="_lgradient_0" x1="93.56120204019503%" y1="13.017241572786997%" x2="89.84577303569424%" y2="99.2065293458878%">
+          <stop offset="21%" stop-opacity="1" style="stop-color:rgb(185,193,255)"></stop>
+          <stop offset="100%" stop-opacity="1" style="stop-color:rgb(133,158,255)"></stop>
+          <stop offset="100%" stop-opacity="1" style="stop-color:rgb(185,193,255)"></stop>
+        </linearGradient>
+        <path d=" M 257.964 96.772 C 256.66 97.325 201.992 129.135 174.849 151.174 C 173.478 152.287 172.299 153.205 170.965 154.361 C 169.858 155.319 169.044 156.248 167.877 157.157 C 166.358 158.34 165.7 159.066 164.64 160.219 C 163.496 161.464 160.937 164.24 159.156 166.603 C 157.836 168.354 156.807 169.901 155.641 171.758 C 152.652 176.52 150.624 180.847 148.491 186.045 C 140.676 205.095 139.782 223.141 141.81 243.533 C 141.99 245.347 142.125 246.886 142.422 248.685 C 142.924 251.732 143.393 254.328 144.509 257.213 C 145.838 260.649 147.472 263.349 149.723 266.26 C 151.767 268.902 153.788 270.914 156.4 272.995 C 159.2 275.226 161.798 276.845 165.078 278.284 C 170.601 280.707 175.792 281.319 181.797 281.467 C 194.524 281.78 204.4 276.078 215.486 270.231 C 227.384 263.956 237.187 257.466 245.557 246.856 C 251.368 239.49 255.506 232.649 258.295 223.53 Q 265.443 200.163 271.169 142.865 Q 274.197 111.464 273.837 107.067 C 273.54 103.447 274.053 97.545 269.512 94.902 C 264.971 92.26 258.884 96.388 258.782 96.315 M 211.637 266.477" fill-rule="evenodd" fill="url(#_lgradient_0)"></path>
+      </svg>
+    </div>
+    <div class="company">
+      <div class="company-name">Inventory<br>Rockstar</div>
+      <div class="company-description">Smart stock tracking app for everyone</div>
+    </div>
+  </div>
+  <div class="right">
+    <div class="title">Dashboard</div>
+    <div class="description"></div>
+    <div class="row">
+      <div class="graph">
+        <svg viewBox="0 0 250 60" width="250" height="90">
+          <path d="M 209.328 17.34 C 221.956 17.588 235.264 32.599 250 22.328" fill="none" vector-effect="non-scaling-stroke" stroke-width="2" stroke="rgb(243,243,250)" stroke-linejoin="miter" stroke-linecap="round" stroke-miterlimit="3"></path>
+          <path d=" M 0 43.634 C 5.934 43.634 11.318 51.209 17.462 51.342 C 33.219 51.683 30.603 59.567 39.187 59.868 C 46.963 60.141 50.44 44.192 60.537 43.77 C 69.126 43.77 72.129 52.461 79.739 52.433 C 90.904 52.433 94.93 38.455 106.648 39.78 C 129.082 42.317 124.556 27.606 139.157 27.177 C 153.758 26.747 158.235 44.485 171.96 44.725 C 196.438 45.155 189.782 17.1 208.248 17.1" fill="none" vector-effect="non-scaling-stroke" stroke-width="2" stroke="url(#_lgradient_1)" stroke-linejoin="miter" stroke-linecap="round" stroke-miterlimit="3"></path>
+        </svg>
+        <img id="trend" src= "../public/images/mini.png" />
+      </div>
+      <div class="graph2">
+        <svg viewBox="0 0 250 60" width="250" height="90">
+          <path d="M 209.328 17.34 C 221.956 17.588 235.264 32.599 250 22.328" fill="none" vector-effect="non-scaling-stroke" stroke-width="2" stroke="rgb(243,243,250)" stroke-linejoin="miter" stroke-linecap="round" stroke-miterlimit="3"></path>
+          <path d=" M 0 43.634 C 5.934 43.634 11.318 51.209 17.462 51.342 C 33.219 51.683 30.603 59.567 39.187 59.868 C 46.963 60.141 50.44 44.192 60.537 43.77 C 69.126 43.77 72.129 52.461 79.739 52.433 C 90.904 52.433 94.93 38.455 106.648 39.78 C 129.082 42.317 124.556 27.606 139.157 27.177 C 153.758 26.747 158.235 44.485 171.96 44.725 C 196.438 45.155 189.782 17.1 208.248 17.1" fill="none" vector-effect="non-scaling-stroke" stroke-width="2" stroke="url(#_lgradient_1)" stroke-linejoin="miter" stroke-linecap="round" stroke-miterlimit="3"></path>
+        </svg>
+        <img id="kpi" src= "../public/images/mini.png" />
+      </div>
+    </div>
+    <div class="row column">
+      <div class="sub-title"></div>
+      <div class="graph3">
+        <svg viewBox="0 0 250 60" width="250" height="90">
+          <path d="M 209.328 17.34 C 221.956 17.588 235.264 32.599 250 22.328" fill="none" vector-effect="non-scaling-stroke" stroke-width="2" stroke="rgb(243,243,250)" stroke-linejoin="miter" stroke-linecap="round" stroke-miterlimit="3"></path>
+          <path d=" M 0 43.634 C 5.934 43.634 11.318 51.209 17.462 51.342 C 33.219 51.683 30.603 59.567 39.187 59.868 C 46.963 60.141 50.44 44.192 60.537 43.77 C 69.126 43.77 72.129 52.461 79.739 52.433 C 90.904 52.433 94.93 38.455 106.648 39.78 C 129.082 42.317 124.556 27.606 139.157 27.177 C 153.758 26.747 158.235 44.485 171.96 44.725 C 196.438 45.155 189.782 17.1 208.248 17.1" fill="none" vector-effect="non-scaling-stroke" stroke-width="2" stroke="url(#_lgradient_1)" stroke-linejoin="miter" stroke-linecap="round" stroke-miterlimit="3"></path>
+        </svg>
+        <img id="order" src= "../public/images/mini.png" />
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="profileContent2" id="profilePopup">
+  <span class="arrow"></span>
+  <img src="../public/images/mini.png" alt="cookies-img" />
+  <p><strong>Electrix <br>Company</strong><br><small>- managed by -</small><br> Alfredo Linguini<br><small>lepasta@elecrix.co</small></p> 
+  <button class="accept">Log out</button>
+  </div>
+</div>  
+
+<div class="container">
+<div class="settingContent2" id="settingPopup">
+  <label for="startdate">Start Date
+  </label>
+  <input type="date" name="startdate" id="startdate">
+  <label for="enddate">End Date
+  </label>
+  <input type="date" name="enddate" id="enddate">
+  <button class="confirm">Confirm</button>
+  </div>
+</div>
 
 </body>
 
@@ -284,7 +347,7 @@
   document.addEventListener("DOMContentLoaded", function() {
       const profileButton = document.querySelector("#profile");
       const profilePopup = document.getElementById("profilePopup");
-      const logOutButton = document.querySelector(".profileContent .accept");
+      const logOutButton = document.querySelector(".profileContent2 .accept");
   
       profileButton.addEventListener("click", function(event) {
           profilePopup.style.display = "flex"; 
@@ -350,74 +413,29 @@
 
 </script>
 
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-      const profileButton = document.querySelector("#profile");
-      const profilePopup = document.getElementById("profilePopup");
-      const logOutButton = document.querySelector(".profileContent .accept");
-  
-      profileButton.addEventListener("click", function(event) {
-          profilePopup.style.display = "flex"; 
-      });
-  
-      document.addEventListener("click", function(event) {
-          const clickInsideProfileButton = profileButton.contains(event.target);
-          const clickInsideProfilePopup = profilePopup.contains(event.target);
 
-          if (!clickInsideProfileButton && !clickInsideProfilePopup) {
-              profilePopup.style.display = "none"; 
-          }
-      });
-
-      logOutButton.addEventListener("click", function(event) {
-          redirectToLogin();
-      });
-
-      function redirectToLogin() {
-          window.location.href = "login.html";
-      }
-  });
-</script>
 
 <script>
   document.addEventListener("DOMContentLoaded", function() {
-      const notiButton = document.querySelector("#notification");
-      const notiPopup = document.getElementById("notiPopup");
+      const settingButton = document.querySelector("#setting");
+      const settingPopup = document.getElementById("settingPopup");
   
-      notiButton.addEventListener("click", function(event) {
-          notiPopup.style.display = "flex"; 
+      settingButton.addEventListener("click", function(event) {
+        settingPopup.style.display = "flex"; 
       });
   
       document.addEventListener("click", function(event) {
-          const clickInsideNotiButton = notiButton.contains(event.target);
-          const clickInsideNotiPopup = notiPopup.contains(event.target);
+          const clickInsidesettingButton = settingButton.contains(event.target);
+          const clickInsidesettingPopup = settingPopup.contains(event.target);
 
-          if (!clickInsideNotiButton && !clickInsideNotiPopup) {
-              notiPopup.style.display = "none"; 
+          if (!clickInsidesettingButton && !clickInsidesettingPopup) {
+            settingPopup.style.display = "none"; 
           }
       });
 
   });
-
 </script>
 
-
-<script>
-  document.getElementById("LogoMenu").addEventListener("click", function() {
-  window.location.href = "map.html";
-  redirectToMainMenu();
-});
-
-  function redirectToMainMenu() {
-      window.location.href = "map.html";
-  }
-</script>
-
-<script>
-  document.getElementById("LogoMenu").addEventListener("click", () => {
-      remote.app.emit('login-successful-page');
-  });
-</script>
 
 <script>
   document.getElementById("dashboard").addEventListener("click", function() {
