--- a/src/source/views/sales.html
+++ b/src/source/views/sales.html
@@ -146,68 +146,31 @@
             </div>
         </div>
 
-
-        <div class ="frame">
-            <div class="button-container">
-            <span class="button-text">Record Sale</span>
-            <a href="#" class="btn" id = "addbutton" >+</a>
-            </div>
+        <div class = 'frame'>
+                <div class="button-container">
+                    <span class="button-text">Record Sale</span>
+                    <a href="#" class="btn" id = "addbutton" >+</a>
+                </div>
         </div>
 
-
-
-        <ul class="responsive-table">
-          <li class="table-header">
-            <div class="col col-1">Date</div>
-            <div class="col col-2">SKU</div>
-            <div class="col col-3">Product <br>Name</div>
-            <div class="col col-4">Quantity</div>
-            <div class="col col-5">Unit <br> Price</div>
-            <div class="col col-6">Total<br>Value</div>
-
-          </li>
-          <ul class="responsive-row">
-          <li class="table-row">
-            <div class="col col-1" data-label="Date"><svg class="svg-icon productButton" id ="productButton1" style="width: 1em; height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M512.197498 752.238526 158.499897 398.540925c-18.73776-18.73776-18.73776-49.092092 0-67.828828s49.092092-18.73776 67.828828 0l285.868773 285.868773 285.868773-285.868773c18.73776-18.73776 49.092092-18.73776 67.828828 0s18.73776 49.092092 0 67.828828L512.197498 752.238526z"  />
-                </svg> 
-                01/01/24
-            </div>
-            <div class="col col-2" data-label="SKU">FRG-123-LG-2</div>
-            <div class="col col-3" data-label="Product">LG Smart Fridge</div>
-            <div class="col col-4" data-label="Quantity">2</div>
-            <div class="col col-5" data-label="UnitPrice">$9,000</div>
-            <div class="col col-6" data-label="TotalValue">$18,000</div>
-          </li>
-          <li class="table-row">
-            <div class="col col-1" data-label="Date"><svg class="svg-icon productButton" id ="productButton1" style="width: 1em; height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M512.197498 752.238526 158.499897 398.540925c-18.73776-18.73776-18.73776-49.092092 0-67.828828s49.092092-18.73776 67.828828 0l285.868773 285.868773 285.868773-285.868773c18.73776-18.73776 49.092092-18.73776 67.828828 0s18.73776 49.092092 0 67.828828L512.197498 752.238526z"  />
-                </svg> 
-            01/04/24
-            </div>
-            <div class="col col-2" data-label="SKU">FRG-123-LG-2</div>
-            <div class="col col-3" data-label="Product">LG Smart Fridge</div>
-            <div class="col col-4" data-label="Quantity">1</div>
-            <div class="col col-5" data-label="UnitPrice">$9,000</div>
-            <div class="col col-6" data-label="TotalValue">$9,000</div>
-          </li>
-          <li class="table-row">
-            <div class="col col-1" data-label="Date">
-                <svg class="svg-icon productButton" id ="productButton1" style="width: 1em; height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M512.197498 752.238526 158.499897 398.540925c-18.73776-18.73776-18.73776-49.092092 0-67.828828s49.092092-18.73776 67.828828 0l285.868773 285.868773 285.868773-285.868773c18.73776-18.73776 49.092092-18.73776 67.828828 0s18.73776 49.092092 0 67.828828L512.197498 752.238526z"  />
-                </svg> 
-                01/05/24
-            </div>
-            <div class="col col-2" data-label="SKU">NDS-424-DS-1</div>
-            <div class="col col-3" data-label="Product">NintendoDS</div>
-            <div class="col col-4" data-label="Quantity">1</div>
-            <div class="col col-5" data-label="UnitPrice">$250</div>
-            <div class="col col-6" data-label="TotalValue">$250</div>
-          </li>
-          
-        </ul>
-        </ul>
+    <div id="main_container" class="main_container">
+        <table id="data-table">
+            <thead>
+                <tr>
+                    <th>Date</th>
+		            <th>SKU</th>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>Quantity</th>
+                </tr>
+            </thead>
+            <tbody id="table-body">
+                <!-- Data rows will be dynamically inserted here -->
+            </tbody>
+        </table>
     </div>
+
+    <script src="../../backend/sales.js"></script>    
 
     <!-- <div class="container">
         <div class="cookiesContent" id="cookiesPopup">
@@ -425,7 +388,7 @@
     searchInput.addEventListener('input', function() {
         const searchText = this.value.toLowerCase().trim();
 
-        const rows = document.querySelectorAll('.table-row');
+        const rows = document.querySelectorAll('tr');
 
         rows.forEach(row => {
             const rowText = row.textContent.toLowerCase();
@@ -455,16 +418,6 @@
 
 </script>
 
-<script>
-    document.getElementById("LogoMenu").addEventListener("click", function() {
-    window.location.href = "map.html";
-    redirectToMainMenu();
-  });
-  
-    function redirectToMainMenu() {
-        window.location.href = "map.html";
-    }
-</script>
 
 <script>
     document.getElementById("LogoMenu").addEventListener("click", () => {
@@ -476,7 +429,7 @@
 <script>
     document.getElementById("dashboard").addEventListener("click", function() {
     window.location.href = "dashboard.html";
-    redirectToDashboard();
+    redirectToDashboard(); //
 });
 
     function redirectToDashboard() {
@@ -496,7 +449,7 @@
         const modal = document.getElementById("modal");
         const closeButton = document.querySelector(".right-container footer #back");
     
-        addProduct.addEventListener("click", function(event) {
+        addProduct.addEventListener("click", function() {
             event.preventDefault();
             modal.style.display = "grid"; 
         });
@@ -685,6 +638,5 @@ document.getElementById("inventory").addEventListener("click", () => {
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-<script src = "../public/functions.js"></script>
 
 </html>
